test: address all CodeRabbit review comments on PR #4198
Verified passing (clean run, no flakes):
- VaultAccountsViewModelTest: 10 tests (added accounts mapping + init error)
- EnterVaultInfoViewModelTest: 11 tests (added serverVault flag tests, dropped unused context field, fixed Patterns NPE via reflective Unsafe stub, fixed function-type-interface mocks)
- KeygenViewModelTest: 3 tests (fixed featureFlagApi -> featureFlagRepository constructor rename from main)
- VaultSettingsViewModelTest: 11 tests (added Rename/Reshare/Delete/Details/Sign navigation tests, captured-and-flipped togglePasswordVisibility nit fix)
- AddressEntryViewModelTest: 12 tests (added LABEL_MAX constant, slot-captured AddressBookEntry asserts on title+address, navigation-back assertion, parameterized Bitcoin+Ethereum+Solana chain validation, scanAddress success+null branches, init edit+create branches)
- SettingsViewModelTest: 13 tests (symmetric PreventScreenshots toggle, Currency/Language/CheckForUpdates/Notifications/DiscountTiers navigation, Discord OpenLink event)
- VerifyTransactionViewModelTest: 10 tests (extended mapper-output assertion to include fee/memo/token, deterministic IO-hop wait via uiState.first)
- SessionApiTest, HttpClientConfiguratorTest, MockHttpClient: production-shaped throwing helper, require guard on respondingWithSequence, try/finally close on each HttpClient